// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover when default should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when light should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-xzyodo-BasePopoverContainer-setLightMode-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when no arrow should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
  </div>,
]
`;

exports[`Popover when placement bottom should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement bottom-end should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement bottom-start should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement left should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement right should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement top should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement top-end should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;

exports[`Popover when placement top-start should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  <div
    className="css-vpqdk8-BasePopoverContainer-PopoverContainer etvxp5h0"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <span>
      Some content
    </span>
    <div
      className="css-67b7o8-PopoverArrow etvxp5h2"
    />
  </div>,
]
`;
